migrated even more old entries, fixed formatting

--- a/_drafts/2011-09-12-ponders-for-12sept2012.md
+++ b/_drafts/2011-09-12-ponders-for-12sept2012.md
@@ -11,22 +11,16 @@ tags:
 
 <p><em>Journal Entry: mostly for me a stream of conscious thought map but if anyone gets anything out of this, should make good conversational fodder, come find me.</em></p>
 
-<p>It's easy to over think one's own influential reach. &nbsp;I can be hesistant to bring up a topic I've discussed or merely referenced in passing many times yet the assumption of my own influence on my social circles is easily over estimated. &nbsp;It is for nearly everyone. &nbsp;My first reaction to this is one of cynicism and negativity, but perhaps that is unrealistic or just silly. &nbsp;To assume that your audience is familiar with your own output to that extreme and in such a complete way is somewhat absurd, but even with the brutal honesty of such a myth of object reality it is the wrong approach. &nbsp;The better approach and one I've only recently come upon is seeing the incredible potential to driving forth one's point; taking advantage in repeating oneself and with each repetition clarifying and perfecting one's expression and argument. &nbsp;Not only that but the acceptance of such exercises as self-expression. &nbsp;Self-expression in this sense referring to the way one can become a characteture in another's eyes. &nbsp;Often times in everyday conversation (IRL since my online and real world presence is quite clearly separate, just as any person separates their life, but&nbsp;<span style="text-decoration: underline;">that is another post entirely</span>) I like to bring up once of my clearest and most long-lasting literary impressions: the character of Vaughn as presented in J.G. Ballard's novel Crash.</p>
+<p>It's easy to over think one's own influential reach.  I can be hesistant to bring up a topic I've discussed or merely referenced in passing many times yet the assumption of my own influence on my social circles is easily over estimated.  It is for nearly everyone.  My first reaction to this is one of cynicism and negativity, but perhaps that is unrealistic or just silly.  To assume that your audience is familiar with your own output to that extreme and in such a complete way is somewhat absurd, but even with the brutal honesty of such a myth of object reality it is the wrong approach.  The better approach and one I've only recently come upon is seeing the incredible potential to driving forth one's point; taking advantage in repeating oneself and with each repetition clarifying and perfecting one's expression and argument.  Not only that but the acceptance of such exercises as self-expression. Self-expression in this sense referring to the way one can become a characteture in another's eyes. Often times in everyday conversation (IRL since my online and real world presence is quite clearly separate, just as any person separates their life, but <a href="#">that is another post entirely</span>) I like to bring up once of my clearest and most long-lasting literary impressions: the character of Vaughn as presented in J.G. Ballard's novel Crash.</p>
 
-<div><p>   Vaughn is perhaps one of the most interesting and well fleshed out characters I've ever read. &nbsp;He is complete while retaining a certain mystique. &nbsp;The wholeness of the character is fascinating because of the concreteness of that character mystique, namely that it is not an allure of occult (in the truest sense, hidden) traits but instead a total character awareness. &nbsp;What I would call an overabundance of self-awareness. &nbsp;The way Vaughn carries himself is described as that of a model. &nbsp;In every single movement, he <em>performs.</em>&nbsp; His every action from an orgasmic thrust of his hips to the picking up of a wrench is described as the practiced, demonstrative movements of one modelling on camera. &nbsp;In reading this my revelation came in the total lack of separation between construed and true reality. &nbsp;The classic "fake it till you make it" is the real takeaway. &nbsp;If one is constantly in character then that is who they become. &nbsp;Just like one of the more classic behavioral techniques where one can force a smile regardless of one's true feelings. By faking a smile one eventually begins to truly feel the smile, becoming happier.</div></p>
+<p>   Vaughn is perhaps one of the most interesting and well fleshed out characters I've ever read. &nbsp;He is complete while retaining a certain mystique. &nbsp;The wholeness of the character is fascinating because of the concreteness of that character mystique, namely that it is not an allure of occult (in the truest sense, hidden) traits but instead a total character awareness. &nbsp;What I would call an overabundance of self-awareness. &nbsp;The way Vaughn carries himself is described as that of a model. &nbsp;In every single movement, he <em>performs.</em>&nbsp; His every action from an orgasmic thrust of his hips to the picking up of a wrench is described as the practiced, demonstrative movements of one modelling on camera. &nbsp;In reading this my revelation came in the total lack of separation between construed and true reality. &nbsp;The classic "fake it till you make it" is the real takeaway. &nbsp;If one is constantly in character then that is who they become. &nbsp;Just like one of the more classic behavioral techniques where one can force a smile regardless of one's true feelings. By faking a smile one eventually begins to truly feel the smile, becoming happier.</p>
 
-<div><p>   True, in writing this I am "in the zone" in that special writer mode where one's mind is constantly spidering out into the most obscure and vaguely related topics that only make sense to the writer themselves. &nbsp;Or perhaps it lies in the difficulty of writing this as my hands tremor with caffeine. &nbsp;The separation between presentation to others and the four-track mind a person is constantly blazing through can only feeblely be expressed in such an opening as <a class="offsite-link-inline" href="http://lesswrong.com/lw/71x/a_crash_course_in_the_neuroscience_of_human/" target="_blank">this LessWrong article</a> or <a class="offsite-link-inline" href="http://xkcd.com/920/" target="_blank">this XKCD</a> piece. &nbsp;That meta-awareness is what I so greatly admire in incredible writers (see the break midway through Egger's "Heartbreaking Work of Staggering Genius" or nearly any work of Charlie Kauffman's). &nbsp;It is truly an incredibly skill to more accurately merge one's thought-train with a reasonable facsimile in external expression. &nbsp;Maybe that is the goal of my obsession with the bounty of self-awareness. &nbsp;Accurate external expression can occur from playing a part, when one lacks the skill to fully express themselves.</div></p>
+<p>   True, in writing this I am "in the zone" in that special writer mode where one's mind is constantly spidering out into the most obscure and vaguely related topics that only make sense to the writer themselves. Or perhaps it lies in the difficulty of writing this as my hands tremor with caffeine. The separation between presentation to others and the four-track mind a person is constantly blazing through can only feeblely be expressed in such an opening as <a class="offsite-link-inline" href="http://lesswrong.com/lw/71x/a_crash_course_in_the_neuroscience_of_human/" target="_blank">this LessWrong article</a> or <a class="offsite-link-inline" href="http://xkcd.com/920/" target="_blank">this XKCD</a> piece.  That meta-awareness is what I so greatly admire in incredible writers (see the break midway through Egger's "Heartbreaking Work of Staggering Genius" or nearly any work of Charlie Kauffman's).  It is truly an incredibly skill to more accurately merge one's thought-train with a reasonable facsimile in external expression.  Maybe that is the goal of my obsession with the bounty of self-awareness.  Accurate external expression can occur from playing a part, when one lacks the skill to fully express themselves.</p>
 
-<div><p>   The "fake it till you make it" method has also become one of the predominant techniques in the field of pick up artistery as of late. &nbsp;Real Social Dynamics (RSD), one premier method and pioneering company, basis their entire approach no longer on the previous call-and-response style multiple-choice method but instead on 'natural modelling.' &nbsp;Naturals are those who are naturally good at picking up women. &nbsp;Nearly everyone has known a person like this, those who constantly have a partner and seem to expel next to no effort in doing so. &nbsp;RSD concentrates on modelling every part of the behavior of these naturals and through emulation internalizing the behavior. &nbsp;By conditioning and internalizing such behavior one <em>becomes</em>&nbsp;a natural.</div></p>
+<p>The "fake it till you make it" method has also become one of the predominant techniques in the field of pick up artistery as of late.  Real Social Dynamics (RSD), one premier method and pioneering company, basis their entire approach no longer on the previous call-and-response style multiple-choice method but instead on 'natural modelling.'  Naturals are those who are naturally good at picking up women.  Nearly everyone has known a person like this, those who constantly have a partner and seem to expel next to no effort in doing so.  RSD concentrates on modelling every part of the behavior of these naturals and through emulation internalizing the behavior.  By conditioning and internalizing such behavior one <em>becomes</em> a natural.</p>
 
-<div><p>   In terms of bridging that gap further between internalized behavior and surpressing abundant self-awareness, I have been reading about Charles Munger recently. &nbsp;Charles Munger is one of the closest friends and key advisors to Warren Buffet, quite possibly the richest man on Earth. &nbsp;Charles Munger is no slouch in his own right with a estimated net worth of $1.7 billion. &nbsp;In reading Tim Ferriss' <span style="text-decoration: underline;">Four Hour Body</span> recently I came upon a fascinating aside about Munger and how he has honed his mind over his lifetime into becoming an absolutely incredible human risk-assessment machine. &nbsp;Using an estimated 80-90 mental models he has compiled and studied over the years in multiple disciplines leading to as Ferriss quotes Warrent Buffet himself "<em>'The best 30-second mind in the world. &nbsp;He goes from A to Z in one move. &nbsp;He sees the essence of everything before you even finish the sentence.'&nbsp;</em>"</div></p>
+<p>In terms of bridging that gap further between internalized behavior and surpressing abundant self-awareness, I have been reading about Charles Munger recently.  Charles Munger is one of the closest friends and key advisors to Warren Buffet, quite possibly the richest man on Earth.  Charles Munger is no slouch in his own right with a estimated net worth of $1.7 billion.  In reading Tim Ferriss' <span style="text-decoration: underline;">Four Hour Body</span> recently I came upon a fascinating aside about Munger and how he has honed his mind over his lifetime into becoming an absolutely incredible human risk-assessment machine.  Using an estimated 80-90 mental models he has compiled and studied over the years in multiple disciplines leading to as Ferriss quotes Warrent Buffet himself "<em>'The best 30-second mind in the world.  He goes from A to Z in one move.  He sees the essence of everything before you even finish the sentence.'</em>"</p>
+<p>   Incredible.  The ability to completely and wholy internalize such analytical tools to the point where one can instantaneously assess nearly any problem presented is easily one of most impressive and admirable goals I think I've ever heard.  I've been vaguely interested in this every since I read Frank Herbert's Dune.  In a extremely brief and probably misguided description of the class of people known as Mentats (link for better descript) I would simply describe them as human calculators.  After a massive war between machines (having reached the singularity or some such thing) and humans the humans no longer trust machines and have basically honed different individuals into human calculators and Charles Mungers.  While Mentats tend to be more adept at wartime calculation and Munger the field of finance and business, the principle is the same.  To close the gap between the conscious and unconscious mind to the point where one melds their consciousness into a reality assessment tool and becomes no longer a surface, external form and an internal dialogue looks to me like fulfillment of what some call "becoming a complete human."</p>
 
-<div><p>   Incredible. &nbsp;The ability to completely and wholy internalize such analytical tools to the point where one can instantaneously assess nearly any problem presented is easily one of most impressive and admirable goals I think I've ever heard. &nbsp;I've been vaguely interested in this every since I read Frank Herbert's Dune. &nbsp;In a extremely brief and probably misguided description of the class of people known as Mentats (link for better descript) I would simply describe them as human calculators. &nbsp;After a massive war between machines (having reached the singularity or some such thing) and humans the humans no longer trust machines and have basically honed different individuals into human calculators and Charles Mungers. &nbsp;While Mentats tend to be more adept at wartime calculation and Munger the field of finance and business, the principle is the same. &nbsp;To close the gap between the conscious and unconscious mind to the point where one melds their consciousness into a reality assessment tool and becomes no longer a surface, external form and an internal dialogue looks to me like fulfillment of what some call "becoming a complete human."</div></p>
-</div>
-
-<p>So, go get started.  Keeping with the theme the Luddites have a compiled <a class="offsite-link-inline" href="http://www.ludism.org/mentat/HomePage" target="_blank">a nice Mentat Wiki resource</a></p>
-
+<p>So, go get started.  Keeping with the theme the Luddites have a compiled <a href="http://www.ludism.org/mentat/HomePage" target="_blank">a nice Mentat Wiki resource</a></p>
 <p> ~ 12 September, 2011 </p>
-
------
-
