cleaned up headers, standardized blockquote class across papers

--- a/_posts/2011-09-12-ponders-for-12sept2012.md
+++ b/_posts/2011-09-12-ponders-for-12sept2012.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Ponderings for 12 September, 2011
+title: journal entry 12sept2011
 date: 2011-09-12
 category: journal
 tags:
