major overhaul, deleted categories links, journal, main, quotes, and site. merged posts into mostly notes.

--- a/_posts/2011-10-30-dau.md
+++ b/_posts/2011-10-30-dau.md
@@ -2,7 +2,7 @@
 layout: post
 title: Dau - On the movie set that ate itself
 date: 2011-10-30
-category: links
+category: notes
 tags:
  - links
  - film
