formatting fix on nicotine post, linebreak

--- a/_posts/2012-12-26-nicotine.md
+++ b/_posts/2012-12-26-nicotine.md
@@ -126,7 +126,8 @@ While I appear to have had an insanely productive week during my testing, I was 
 
 That being said, used sparingly, I would highly recommend nicotine as a focused and quite safe cognitive aid.  Nicotine appears to provide excellent focus, a steady alertness (but can be too much when "stacked" with caffeine, which I do not recommend doing with any substance really), and a passive absorption that is rarely a possibility with a stimulant such as this.  The effects appear to diminish after 3 days, a fairly common frame for similar supplements, when used consistently.  For maximum effectiveness and results I would recommend its use for a maximum of 24hr periods with offset rests of 48 to 72 hours. The ludicrous amount of potential interactions and properties of the drug constantly reveal new uses and side effects so bear in mind the versatile and potentially hazardous nature of such usage. 
 
-<p><strong>Positive effects</strong> at 24mg include stable longterm alertness (rather than the jitters that accompany caffeine) throughout the day with slow release, increased focus, and mood alleviation.  <strong>Side effects</strong> other than appetite suppression only presented themselves with withdrawal which included headaches, increased tiredness, and radical mood shifts.  The possibilities of experiencing depressive symptoms as I had are reasonably high with overuse and abrupt "cold turkey" withdrawal of drug, so I would clearly not recommend either overuse or cold turkey withdrawal.</p>
+<p> - <strong>Positive effects</strong> at 24mg include stable longterm alertness (rather than the jitters that accompany caffeine) throughout the day with slow release, increased focus, and mood alleviation.</p>
+<p> - <strong>Side effects</strong> other than appetite suppression only presented themselves with withdrawal which included headaches, increased tiredness, and radical mood shifts.  The possibilities of experiencing depressive symptoms as I had are reasonably high with overuse and abrupt "cold turkey" withdrawal of drug, so I would clearly not recommend either overuse or cold turkey withdrawal.</p>
 
 <hr />
 
