--- a/_posts/2012-12-26-nicotine.md
+++ b/_posts/2012-12-26-nicotine.md
@@ -11,8 +11,7 @@ tags:
 description: info on my experiment with nicotine patches
 ---
 
-
-<p class="blockquote">NOTE: Last updated 26dec2012</p>
+{{page.date | date:"%d%b%Y"}} | {% if page.category %} <a href="/{{page.category}}">{{page.category}}</a>{% endif %} | theoretick
 
 
 On rare occasions over the past few years I have smoked cigarettes.  Usually at a bar or another party environment, be it a result of those around me or some weird form of boredom but I have often found it a fascinating habit. My fascination lies in nicotine's colorful and fascinating resume including its high degree of social acceptability, its links to <a href="http://www.neurobrainstorm.com/2012/10/why-tobacco-is-still-legal-side-effect.html" target="_blank">hormone production and DHT</a>, its effects <a href="http://www.medicalnewstoday.com/releases/85508.php" target="_blank">as a pain-killer</a>, and even the seemingly contradictory evidence of its effects as both a stimulant and a depressant (see below).
