added classy staging chart to nicotine page and fixed random formatting

--- a/_posts/2012-12-26-nicotine.md
+++ b/_posts/2012-12-26-nicotine.md
@@ -11,7 +11,8 @@ tags:
 description: info on my experiment with nicotine patches
 ---
 
-{{page.date | date:"%d%b%Y"}} | {% if page.category %} <a href="/{{page.category}}">{{page.category}}</a>{% endif %} | theoretick
+{% if page.category %}<h3><a href="/{{page.category}}">{{page.category}}</a></h3>{% endif %}
+{{page.date | date:"%d%b%Y"}}
 
 
 On rare occasions over the past few years I have smoked cigarettes.  Usually at a bar or another party environment, be it a result of those around me or some weird form of boredom but I have often found it a fascinating habit. My fascination lies in nicotine's colorful and fascinating resume including its high degree of social acceptability, its links to <a href="http://www.neurobrainstorm.com/2012/10/why-tobacco-is-still-legal-side-effect.html" target="_blank">hormone production and DHT</a>, its effects <a href="http://www.medicalnewstoday.com/releases/85508.php" target="_blank">as a pain-killer</a>, and even the seemingly contradictory evidence of its effects as both a stimulant and a depressant (see below).
@@ -32,7 +33,7 @@ Unfortunately, cigarettes are messy and quite problematic.  I was curious about 
 <p>Cigarettes are problematic, the uneven dosage can be equally problematic both from the brand variations as well as inconsistencies with such basic habits as, say, frequency of "pulls" when inhaling. 
 <a href="http://www.erowid.org/plants/tobacco/tobacco_nic.shtml" target="_blank">Here's a chart from a 1994 FTC study</a> about nicotine and tar content of the top domestic cigarette brands.</p>
 
-<p><strong>In terms of long term effects of the study, it appears to be quite safe in terms of addiction and long term harmful effects:</strong> Regarding diabetes, the interactions between nicotine and glucose metabolism have been discussed previously with one study citing greater nicotine sensitivity **only** in people predisposed. Nicotine absorption <a href="http://examine.com/supplements/Nicotine/#summary6">"resulted in nonsignificant trends for increased insulin resistance and higher blood glucose levels."</a>  As noted with that link, nicotine can affect healthy and diabetic people differently, but has no statistically significant results for healthy individuals.  For sake of argument I found <a href="http://circ.ahajournals.org/content/94/5/878.full" target="_blank">a more "human" study of nicotine gum leading to higher insulin resistance</a>, but don't find n=40 to be particularly compelling, though, perhaps more than rats.</p>
+<p><strong>In terms of long term effects of the study, it appears to be quite safe in terms of addiction and long term harmful effects.</strong> Regarding diabetes, the interactions between nicotine and glucose metabolism have been discussed previously with one study citing greater nicotine sensitivity **only** in people predisposed. Nicotine absorption <a href="http://examine.com/supplements/Nicotine/#summary6">"resulted in nonsignificant trends for increased insulin resistance and higher blood glucose levels."</a>  As noted with that link, nicotine can affect healthy and diabetic people differently, but has no statistically significant results for healthy individuals.  For sake of argument I found <a href="http://circ.ahajournals.org/content/94/5/878.full" target="_blank">a more "human" study of nicotine gum leading to higher insulin resistance</a>, but don't find n=40 to be particularly compelling, though, perhaps more than rats.</p>
 
 <p>In terms of published research all I've managed to find so far on depression has been <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2446482/" target="_blank">one case study</a> of a 48yo man with adult ADHD who used nicotine as a successful treatment for depression and anxiety. I'm curious whether or not that man had the aforementioned genetic marker, but there was no mention in the paper.  Other various reports online include such sites as drug-forums.com and erowid.</p>
 
@@ -44,15 +45,17 @@ Unfortunately, cigarettes are messy and quite problematic.  I was curious about 
 
 ##Setup##
 
-###Step 1:  1 week daily patch###
+<img src="/storage/nicotine-cycle-chart.png" width="100%" />
 
-###Step 2:  48hr "detox" and rest###
+###Stage 1:  1 week daily patch###
 
-###Step 3:  1 week control (no nicotine)###
+###Stage 2:  48hr "detox" and rest###
+
+###Stage 3:  1 week control (no nicotine)###
 
 The standard patch kits come in a 3-week supply: first week with the strongest dose and incrementing down to nicotine free on the fourth week.  Since I am not a standard smoker I decided to buy the second week transition system of 14mg transdermal patches (specifically CVS brand Habitrol patches).  Apparently the three-week cycle was rebranded for this kit as a three-step cycle and mine included a total of 14 patches, for a full two-week dosage.  As stated on the box:
 
-<p class="blockquote"> "if you smoke 10 or less cigarettes per day: start with step 2"</p>
+<p class="blockquote"> "if you smoke 10 or less cigarettes per day: start with stage 2"</p>
 
 I'll make a note however that this is definitely not the cheapest way to accessibly get nicotine, having paid $15 for the pack compared to a $6 pack of cigarettes, it was at least the greatest per-dollar volume.  A standard cigarette will provide 1 to 1.5mg of nicotine each.  As stated above, smoking 10 cigarettes a day (the supposed equivalent of one patch) <strong>will net you 4mg LESS nicotine than the equivalent inhalant delivery.</strong>  If nothing else, I prefer the transdermal to inhalatory (or enteral for that matter) method.
 
@@ -60,7 +63,7 @@ Each night I'll be removing the patch about two hours before going to sleep.
 
 After the week of patches I'll go "cold turkey," wait approx 72 hours, and try out one week without for a control to compare my mood/energy/productivity.  See above for notes about presence of nicotine metabolites in the system.
 
-Regarding measurement, obviously for testing effects some cognitive measure would be key, but as I've noted with my past experiments with nootropics, I have found it very difficult to find any sort of consistent and accurate measure of ability.  With n-back testing becoming more problematic with each paper I see, my previous 1-5 scale on sleep/exercise/mood/energy seeming quite unsatisfactory and at present have no other scale I'm really happy with, I decided to simply go with an overly basic qualitative log.  This one is a bit less formal than my other stuff but based on the results I will reconsider setting up something a bit more measurable.  I haven't really looked at his conclusions yet, but midway through my study Gwern eerily posted a <a href="http://www.gwern.net/Nicotine" target="_blank">Nicotine and N-Back test</a>, bearing in mind <a href="/main/2011/8/9/what-exactly-is-n-back.html" target="_blank">N-Back's problematic nature</a>, I'd recommend checking his work out for a more quantitative measure.
+<p><strong>Regarding measurement</strong>, obviously for testing effects some cognitive measure would be key, but as I've noted with my past experiments with nootropics, I have found it very difficult to find any sort of consistent and accurate measure of ability.  With n-back testing becoming more problematic with each paper I see, my previous 1-5 scale on sleep/exercise/mood/energy seeming quite unsatisfactory and at present have no other scale I'm really happy with, I decided to simply go with an overly basic qualitative log.  This one is a bit less formal than my other stuff but based on the results I will reconsider setting up something a bit more measurable.  I haven't really looked at his conclusions yet, but midway through my study Gwern eerily posted a <a href="http://www.gwern.net/Nicotine" target="_blank">Nicotine and N-Back test</a>, bearing in mind <a href="/main/2011/8/9/what-exactly-is-n-back.html" target="_blank">N-Back's problematic nature</a>, I'd recommend checking his work out for a more quantitative measure.</p>
 
 
 ##Log##
