--- a/_posts/2012-12-26-nicotine.md
+++ b/_posts/2012-12-26-nicotine.md
@@ -24,6 +24,7 @@ Unfortunately, cigarettes are messy and quite problematic.  I was curious about 
 <li><a href="#setup">Setup</a></li>
 <li><a href="#log">Log</a></li>
 <li><a href="#summary">Summary</a></li>
+<li><a href="#references">References</a></li>
 </ul>
 
 ##Background##
@@ -47,11 +48,11 @@ Unfortunately, cigarettes are messy and quite problematic.  I was curious about 
 
 <img src="/storage/nicotine-cycle-chart.png" width="100%" />
 
-###Stage 1:  1 week daily patch###
+###- Stage 1:  1 week daily patch###
 
-###Stage 2:  48hr "detox" and rest###
+###- Stage 2:  48hr "detox" and rest###
 
-###Stage 3:  1 week control (no nicotine)###
+###- Stage 3:  1 week control (no nicotine)###
 
 The standard patch kits come in a 3-week supply: first week with the strongest dose and incrementing down to nicotine free on the fourth week.  Since I am not a standard smoker I decided to buy the second week transition system of 14mg transdermal patches (specifically CVS brand Habitrol patches).  Apparently the three-week cycle was rebranded for this kit as a three-step cycle and mine included a total of 14 patches, for a full two-week dosage.  As stated on the box:
 
@@ -122,7 +123,7 @@ Dawn of the final day
 ###Control Days:###
 12:34 - Slept way too much. a Little morning drowsiness still even with coffee, I'm definitely going to miss the steady alertness afforded by the patch.  Sitting down and working, I've stayed fairly focused, but within standard ranges.
 
-<h2 id="summary">Summary:</h2>
+##Summary##
 
 While I appear to have had an insanely productive week during my testing, I was quite surprised with both the extent of withdrawal symptoms and the after-effects of the test week.  Now that it has been several weeks since my study, I feel both hesitant and compelled to bring up something that happened during my control week.  I did not record much after (see single post above) but I did experience a pretty severe bout of depression in the aftermath. I am hesitant to contribute this to the nicotine directly but it is definitely worth noting as it was one of the most intense mood shifts I have experienced in recent memory.
 
@@ -130,6 +131,26 @@ That being said, used sparingly, I would highly recommend nicotine as a focused 
 
 <p> - <strong>Positive effects</strong> at 24mg include stable longterm alertness (rather than the jitters that accompany caffeine) throughout the day with slow release, increased focus, and mood alleviation.</p>
 <p> - <strong>Side effects</strong> other than appetite suppression only presented themselves with withdrawal which included headaches, increased tiredness, and radical mood shifts.  The possibilities of experiencing depressive symptoms as I had are reasonably high with overuse and abrupt "cold turkey" withdrawal of drug, so I would clearly not recommend either overuse or cold turkey withdrawal.</p>
+
+<hr />
+<br />
+
+##References:##
+
+<ul type="none">
+  <li>http://www.neurobrainstorm.com/2012/10/why-tobacco-is-still-legal-side-effect.html</li>
+  <li>http://www.medicalnewstoday.com/releases/85508.php</li>
+  <li>http://www.erowid.org/plants/tobacco/tobacco_nic.shtml</li>
+  <li>http://examine.com/supplements/Nicotine/#summary6</li>
+  <li>http://circ.ahajournals.org/content/94/5/878.full</li>
+  <li>http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2446482/</li>
+  <li>http://www.ncbi.nlm.nih.gov/pubmed/16177026</li>
+  <li>http://www.sciencedaily.com/releases/2008/08/080808123144.htm</li>
+  <li>http://howshealth.com/how-long-does-nicotine-stay-in-your-system/</li>
+  <li>http://www.ncbi.nlm.nih.gov/pubmed/9497019</li>
+  <li>http://www.ersj.org.uk/content/9/4/643.full.pdf</li>
+  <li>http://www.gwern.net/Nicotine</li>
+</ul>
 
 <hr />
 
