--- a/_posts/2012-12-26-nicotine.md
+++ b/_posts/2012-12-26-nicotine.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Nicotine testing
+title: Nicotine testing - efficacy as a cognitive enhancer
 date: 2012-12-26
 category: experiments
 tags:
@@ -8,14 +8,15 @@ tags:
  - originalcontent
  - drugs
  - nootropics
-description: info on my experiment with nicotine patches
+  - cognitive enhancement
+description: info on my experiment with nicotine patches and cognition
 ---
 
 {% if page.category %}<h3><a href="/{{page.category}}">{{page.category}}</a></h3>{% endif %}
 {{page.date | date:"%d%b%Y"}}
 
 
-On rare occasions over the past few years I have smoked cigarettes.  Usually at a bar or another party environment, be it a result of those around me or some weird form of boredom but I have often found it a fascinating habit. My fascination lies in nicotine's colorful and fascinating resume including its high degree of social acceptability, its links to <a href="http://www.neurobrainstorm.com/2012/10/why-tobacco-is-still-legal-side-effect.html" target="_blank">hormone production and DHT</a>, its effects <a href="http://www.medicalnewstoday.com/releases/85508.php" target="_blank">as a pain-killer</a>, and even the seemingly contradictory evidence of its effects as both a stimulant and a depressant (see below).
+On rare occasions over the past few years I have smoked cigarettes.  Usually at a bar or another social environment, be it a result of those around me or some weird form of boredom, I have often found it a fascinating habit. My interest lies in nicotine's colorful and fascinating resume including its high degree of social acceptability, its links to <a href="#note2">hormone production and DHT</a>, its effects <a href="#note3" >as a pain-killer</a>, and even the seemingly contradictory evidence of its effects as both a stimulant and a depressant (see below).
 
 Unfortunately, cigarettes are messy and quite problematic.  I was curious about what exactly nicotine can do and the easiest way to control for the bevy of factors tied to cigarettes (social conditions, weather, countless side-effects, inconsistency of dosage by brand or individual cigarette) I decided to try out some nicotine patches.
 
@@ -32,17 +33,17 @@ Unfortunately, cigarettes are messy and quite problematic.  I was curious about 
 <p>As one of the premiere social drugs, Nicotine has been around for a long time and generated a laundry-list of side effects, interactions, correlations, and benefits.  There has been countless research on its cognition-enhancing effects, addictiveness, relationship to pre-existing conditions such as diabetes, and its effects as a mood modifier.</p>
 
 <p>Cigarettes are problematic, the uneven dosage can be equally problematic both from the brand variations as well as inconsistencies with such basic habits as, say, frequency of "pulls" when inhaling. 
-<a href="http://www.erowid.org/plants/tobacco/tobacco_nic.shtml" target="_blank">Here's a chart from a 1994 FTC study</a> about nicotine and tar content of the top domestic cigarette brands.</p>
+<a href="#note4">Here's a chart from a 1994 FTC study</a> about nicotine and tar content of the top domestic cigarette brands.</p>
 
-<p><strong>In terms of long term effects of the study, it appears to be quite safe in terms of addiction and long term harmful effects.</strong> Regarding diabetes, the interactions between nicotine and glucose metabolism have been discussed previously with one study citing greater nicotine sensitivity **only** in people predisposed. Nicotine absorption <a href="http://examine.com/supplements/Nicotine/#summary6">"resulted in nonsignificant trends for increased insulin resistance and higher blood glucose levels."</a>  As noted with that link, nicotine can affect healthy and diabetic people differently, but has no statistically significant results for healthy individuals.  For sake of argument I found <a href="http://circ.ahajournals.org/content/94/5/878.full" target="_blank">a more "human" study of nicotine gum leading to higher insulin resistance</a>, but don't find n=40 to be particularly compelling, though, perhaps more than rats.</p>
+<p><strong>In terms of long term effects of the study, it appears to be quite safe in terms of addiction and long term harmful effects.</strong> Regarding diabetes, the interactions between nicotine and glucose metabolism have been discussed previously with one study citing greater nicotine sensitivity **only** in people predisposed. Nicotine absorption at 14mg <a href="#note5">"resulted in nonsignificant trends for increased insulin resistance and higher blood glucose levels."</a>  As noted with that link, nicotine can affect healthy and diabetic people differently, but has no statistically significant results for healthy individuals.  For sake of argument I found <a href="#note6" >a more "human" study of nicotine gum leading to higher insulin resistance</a>, but don't find n=40 to be particularly compelling, though, perhaps more than rats.</p>
 
-<p>In terms of published research all I've managed to find so far on depression has been <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2446482/" target="_blank">one case study</a> of a 48yo man with adult ADHD who used nicotine as a successful treatment for depression and anxiety. I'm curious whether or not that man had the aforementioned genetic marker, but there was no mention in the paper.  Other various reports online include such sites as drug-forums.com and erowid.</p>
+<p>In terms of published research all I've managed to find so far on depression has been <a href="#note7">one case study</a> of a 48yo man with adult ADHD who used nicotine as a successful treatment for depression and anxiety. I'm curious whether or not that man had the aforementioned genetic marker, but there was no mention in the paper.  Other various reports online include such sites as drug-forums.com and erowid.</p>
 
-<p><strong>Regarding addiction,</strong><a href="http://www.ncbi.nlm.nih.gov/pubmed/16177026" target="_blank">it does not appear that the addictive properties involved in cigarettes or smoking are directly an effect of nicotine itself, but are instead an effect of the MAOI inhibitory activity of smoking tobacco</a>. It is not the nicotine that is necessarily addictive.  I'll post my thoughts on any "withdrawal" when the week is completed, but have no expectations for cravings first because of the aforementioned research and second the abstract nature of my method (the patch) leaves it difficult for me to have any sort of reference point for cravings.  The passiveness of the patch gives me no mental anchor like a cigarette I can obsess over.</p>
+<p><strong>Regarding addiction,</strong><a href="#note8">it does not appear that the addictive properties involved in cigarettes or smoking are directly an effect of nicotine itself, but are instead an effect of the MAOI inhibitory activity of smoking tobacco</a>. It is not the nicotine that is necessarily addictive.  I'll post my thoughts on any "withdrawal" when the week is completed, but have no expectations for cravings first because of the aforementioned research and second the abstract nature of my method (the patch) leaves it difficult for me to have any sort of reference point for cravings.  The passiveness of the patch gives me no mental anchor like a cigarette I can obsess over.</p>
 
-<p>There has been <a href="http://www.sciencedaily.com/releases/2008/08/080808123144.htm" target="_blank">some previous research</a> as well that links nicotine's addictiveness to a specific genetic signature.  One such study showed that the CHRNA5 gene may be responsible for the pleasure smokers get from their first cigarette and may be directly responsible for the path of lifelong smoking all the way to throat/lung cancer.</p> 
+<p>There has been <a href="#note9">some previous research</a> as well that links nicotine's addictiveness to a specific genetic signature.  One such study showed that the CHRNA5 gene may be responsible for the pleasure smokers get from their first cigarette and may be directly responsible for the path of lifelong smoking all the way to throat/lung cancer.</p> 
 
-<p id="presence">My original 14-day setup required some revision as I've found several sources that point to nicotine's <a href="http://howshealth.com/how-long-does-nicotine-stay-in-your-system/" target="_blank">continued presence in the body for 2-4 days after absorption</a>.  The two main metabolites in nicotine are N-Oxide and Cotinine.  N-Oxide tends to leave the body in 72 hours and Cotinine can remain for much longer, four days up to one month.  While I have noticed some definite variation in the subject matter on both absorption and presence depending on method of delivery, there isn't a whole lot on transdermal delivery.  <a href="http://www.ncbi.nlm.nih.gov/pubmed/9497019" target="_blank">One study listed Cotinine as having no effect on withdrawal symptoms</a>, while another listed <a href="http://www.ersj.org.uk/content/9/4/643.full.pdf" target="_blank">little significant difference in withdrawal symptoms (irritability and cravability) among placebo groups and 15mg patch groups due to Cotinine levels</a>.  In light of these two papers, I'll consider its continued presence not significant regarding my body's clearance (<strong>Updated:</strong> please view <a href="#note1">footnote</a> and <a href="#summary">Summary</a> for an important note on this topic).  I'll say 48 hours seems sufficient for my purposes.</p>
+<p id="presence">My original 14-day setup required some revision as I've found several sources that point to nicotine's <a href="#note10">continued presence in the body for 2-4 days after absorption</a>.  The two main metabolites in nicotine are N-Oxide and Cotinine.  N-Oxide tends to leave the body in 72 hours and Cotinine can remain for much longer, four days up to one month.  While I have noticed some definite variation in the subject matter on both absorption and presence depending on method of delivery, there isn't a whole lot on transdermal delivery.  <a href="#note11">One study listed Cotinine as having no effect on withdrawal symptoms</a>, while another listed <a href="#note12">little significant difference in withdrawal symptoms (irritability and cravability) among placebo groups and 15mg patch groups due to Cotinine levels</a>.  In light of these two papers, I'll consider its continued presence not significant regarding my body's clearance (<strong>Updated:</strong> please view <a href="#note1">Footnote1</a> and <a href="#summary">Summary</a> for an important note on this topic).  I'll say 48 hours seems sufficient for my purposes.</p>
 
 ##Setup##
 
@@ -64,7 +65,7 @@ Each night I'll be removing the patch about two hours before going to sleep.
 
 After the week of patches I'll go "cold turkey," wait approx 72 hours, and try out one week without for a control to compare my mood/energy/productivity.  See above for notes about presence of nicotine metabolites in the system.
 
-<p><strong>Regarding measurement</strong>, obviously for testing effects some cognitive measure would be key, but as I've noted with my past experiments with nootropics, I have found it very difficult to find any sort of consistent and accurate measure of ability.  With n-back testing becoming more problematic with each paper I see, my previous 1-5 scale on sleep/exercise/mood/energy seeming quite unsatisfactory and at present have no other scale I'm really happy with, I decided to simply go with an overly basic qualitative log.  This one is a bit less formal than my other stuff but based on the results I will reconsider setting up something a bit more measurable.  I haven't really looked at his conclusions yet, but midway through my study Gwern eerily posted a <a href="http://www.gwern.net/Nicotine" target="_blank">Nicotine and N-Back test</a>, bearing in mind <a href="/main/2011/8/9/what-exactly-is-n-back.html" target="_blank">N-Back's problematic nature</a>, I'd recommend checking his work out for a more quantitative measure.</p>
+<p><strong>Regarding measurement</strong>, obviously for testing effects some cognitive measure would be key, but as I've noted with my past experiments with nootropics, I have found it very difficult to find any sort of consistent and accurate measure of ability.  With n-back testing becoming more problematic with each paper I see, my previous 1-5 scale on sleep/exercise/mood/energy seeming quite unsatisfactory and at present have no other scale I'm really happy with, I decided to simply go with an overly basic qualitative log.  This one is a bit less formal than my other stuff but based on the results I will reconsider setting up something a bit more measurable.  I haven't really looked at his conclusions yet, but midway through my study Gwern eerily posted a <a href="#note13">Nicotine and N-Back test</a>, bearing in mind <a href="/main/2011/8/9/what-exactly-is-n-back.html" >N-Back's problematic nature</a>, I'd recommend checking his work out for a more quantitative measure.</p>
 
 
 ##Log##
@@ -79,7 +80,7 @@ After the week of patches I'll go "cold turkey," wait approx 72 hours, and try o
 
 ###Day Two:###
 
-13:41 - Woke up far too late today (If you want to see how late <a href="/experiments/sleep-data-method.html" target="_blank">let me plug my other project</a>).  Went in to work and worked for a few hours. First hour of the patch gave me the same tingling/itching behavior as I experienced yesterday but fairly quickly subsided. No coffee this morning and feeling plenty awake and alert. General awareness but a slight haziness from sleep, so there isn't the full relief such reported with Adrafinil/Modafinil or other eugregorics.
+13:41 - Woke up far too late today (If you want to see how late <a href="/experiments/sleep-data-method.html" >let me plug my other project</a>).  Went in to work and worked for a few hours. First hour of the patch gave me the same tingling/itching behavior as I experienced yesterday but fairly quickly subsided. No coffee this morning and feeling plenty awake and alert. General awareness but a slight haziness from sleep, so there isn't the full relief such reported with Adrafinil/Modafinil or other eugregorics.
 
 18:37 - still alert, still productive, focused, and aware. I finally ate a meal and had a small cup of coffee to keep any caffeine withdrawal off. After this I think I need to take a caffeine sabbatical.
 
@@ -133,27 +134,22 @@ That being said, used sparingly, I would highly recommend nicotine as a focused 
 <p> - <strong>Side effects</strong> other than appetite suppression only presented themselves with withdrawal which included headaches, increased tiredness, and radical mood shifts.  The possibilities of experiencing depressive symptoms as I had are reasonably high with overuse and abrupt "cold turkey" withdrawal of drug, so I would clearly not recommend either overuse or cold turkey withdrawal.</p>
 
 <hr />
-<br />
 
-##References:##
+<p id="note1">1. <a href="#presence">Note:</a> While I found no real studies regarding this, it's definitely worth noting that this methodology may be problematic as Cotinine is marketed today as a antidepressant under the brand-name Scotine.</p>
 
-<ul type="none">
-  <li>http://www.neurobrainstorm.com/2012/10/why-tobacco-is-still-legal-side-effect.html</li>
-  <li>http://www.medicalnewstoday.com/releases/85508.php</li>
-  <li>http://www.erowid.org/plants/tobacco/tobacco_nic.shtml</li>
-  <li>http://examine.com/supplements/Nicotine/#summary6</li>
-  <li>http://circ.ahajournals.org/content/94/5/878.full</li>
-  <li>http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2446482/</li>
-  <li>http://www.ncbi.nlm.nih.gov/pubmed/16177026</li>
-  <li>http://www.sciencedaily.com/releases/2008/08/080808123144.htm</li>
-  <li>http://howshealth.com/how-long-does-nicotine-stay-in-your-system/</li>
-  <li>http://www.ncbi.nlm.nih.gov/pubmed/9497019</li>
-  <li>http://www.ersj.org.uk/content/9/4/643.full.pdf</li>
-  <li>http://www.gwern.net/Nicotine</li>
+##References##
+
+<ul id="references">
+  <li id="note2"> 2. <a href="http://www.neurobrainstorm.com/2012/10/why-tobacco-is-still-legal-side-effect.html" target="_blank">Why Tobacco is Still Legal.</a></li>
+  <li id="note3"> 3. <a href="http://www.medicalnewstoday.com/releases/85508.php" target="_blank">Nicotine Patch Decreases Post Surgical Pain.</a> American Society of Anesthesiologists. (2007, October 15.</li>
+  <li id="note4"> 4. <a href="http://www.ftc.gov/os/1997/07/cigarett.htm" target="_blank">"Tar," Nicotine, and Carbon Monoxide of the Smoke of 1206 Varieties of Domestic Cigarettes For the Year 1994.</a> Federal Trade Commission. July 15, 1997</li>
+  <li id="note5"> 5. <a href="http://www.ncbi.nlm.nih.gov/pubmed/15131760" target="_blank">Acute effects of nicotine on serum glucose insulin growth hormone and cortisol in healthy smokers.</a> Metabolism. 2004 May;53(5):578-82.</li>
+  <li id="note6"> 6. <a href="http://circ.ahajournals.org/content/94/5/878.full" target="_blank">Long-term Use of Nicotine Gum Is Associated With Hyperinsulinemia and Insulin Resistance.</a> Circulation. 1996; 94: 878-881</li>
+  <li id="note7"> 7. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2446482/" target="_blank">Transdermal Nicotine in Adult ADHD With Depression and Anxiety.</a> Prim Care Companion J Clin Psychiatry. 2008; 10(3): 253–254.</li>
+  <li id="note8"> 8. <a href="http://www.ncbi.nlm.nih.gov/pubmed/16177026" target="_blank">Monoamine Oxidase Inhibition Dramatically Increases the Motivation to Self-Administer Nicotine in Rats.</a> The Journal of Neuroscience, 21 September 2005, 25(38): 8593-8600</li>
+  <li id="note9"> 9. <a href="http://onlinelibrary.wiley.com/doi/10.1111/j.1360-0443.2008.02279.x/full" target="_blank">Association of a single nucleotide polymorphism in neuronal acetylcholine receptor subunit alpha 5 (CHRNA5) with smoking status and with ‘pleasurable buzz’ during early experimentation with smoking.</a> Addiction, 2008; 103 (9): 1544</li>
+  <li id="note10">10. <a href="http://howshealth.com/how-long-does-nicotine-stay-in-your-system/" target="_blank">How long does Nicotine stay in your System?</a></li>
+  <li id="note11">11. <a href="http://www.ncbi.nlm.nih.gov/pubmed/9497019" target="_blank">Cotinine: effects with and without nicotine.</a> Psychopharmacology (Berl). 1998 Jan ;135(2):141-50.</li>
+  <li id="note12">12. <a href="http://www.ersj.org.uk/content/9/4/643.full.pdf" target="_blank">Importance of baseline cotinine plasma values in smoking cessation: results from a double-blind study with nicotine patch.</a> Eur Respir J. 1996 Apr ;9(4):643-51</li>
+  <li id="note13">13. <a href="http://www.gwern.net/Nicotine" target="_blank">Gwern's Nicotine Page</a></li>
 </ul>
-
-<hr />
-
-<p id="note1"><a href="#presence">NOTE:</a> While I found no real studies regarding this, it's definitely worth noting that this methodology may be problematic as Cotinine is marketed today as a antidepressant under the brand-name Scotine.</p>
-
-
