--- a/_posts/2012-12-26-nicotine.md
+++ b/_posts/2012-12-26-nicotine.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Nicotine testing - efficacy as a cognitive enhancer
+title: Nicotine Testing - efficacy as a cognitive enhancer
 date: 2012-12-26
 category: experiments
 tags:
@@ -135,21 +135,21 @@ That being said, used sparingly, I would highly recommend nicotine as a focused 
 
 <hr />
 
-<p id="note1">1. <a href="#presence">Note:</a> While I found no real studies regarding this, it's definitely worth noting that this methodology may be problematic as Cotinine is marketed today as a antidepressant under the brand-name Scotine.</p>
+<p id="note1"><a href="#presence">Note:</a> While I found no real studies regarding this, it's definitely worth noting that this methodology may be problematic as Cotinine is marketed today as a antidepressant under the brand-name Scotine.</p>
 
 ##References##
 
-<ul id="references">
-  <li id="note2"> 2. <a href="http://www.neurobrainstorm.com/2012/10/why-tobacco-is-still-legal-side-effect.html" target="_blank">Why Tobacco is Still Legal.</a></li>
-  <li id="note3"> 3. <a href="http://www.medicalnewstoday.com/releases/85508.php" target="_blank">Nicotine Patch Decreases Post Surgical Pain.</a> American Society of Anesthesiologists. (2007, October 15.</li>
-  <li id="note4"> 4. <a href="http://www.ftc.gov/os/1997/07/cigarett.htm" target="_blank">"Tar," Nicotine, and Carbon Monoxide of the Smoke of 1206 Varieties of Domestic Cigarettes For the Year 1994.</a> Federal Trade Commission. July 15, 1997</li>
-  <li id="note5"> 5. <a href="http://www.ncbi.nlm.nih.gov/pubmed/15131760" target="_blank">Acute effects of nicotine on serum glucose insulin growth hormone and cortisol in healthy smokers.</a> Metabolism. 2004 May;53(5):578-82.</li>
-  <li id="note6"> 6. <a href="http://circ.ahajournals.org/content/94/5/878.full" target="_blank">Long-term Use of Nicotine Gum Is Associated With Hyperinsulinemia and Insulin Resistance.</a> Circulation. 1996; 94: 878-881</li>
-  <li id="note7"> 7. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2446482/" target="_blank">Transdermal Nicotine in Adult ADHD With Depression and Anxiety.</a> Prim Care Companion J Clin Psychiatry. 2008; 10(3): 253–254.</li>
-  <li id="note8"> 8. <a href="http://www.ncbi.nlm.nih.gov/pubmed/16177026" target="_blank">Monoamine Oxidase Inhibition Dramatically Increases the Motivation to Self-Administer Nicotine in Rats.</a> The Journal of Neuroscience, 21 September 2005, 25(38): 8593-8600</li>
-  <li id="note9"> 9. <a href="http://onlinelibrary.wiley.com/doi/10.1111/j.1360-0443.2008.02279.x/full" target="_blank">Association of a single nucleotide polymorphism in neuronal acetylcholine receptor subunit alpha 5 (CHRNA5) with smoking status and with ‘pleasurable buzz’ during early experimentation with smoking.</a> Addiction, 2008; 103 (9): 1544</li>
-  <li id="note10">10. <a href="http://howshealth.com/how-long-does-nicotine-stay-in-your-system/" target="_blank">How long does Nicotine stay in your System?</a></li>
-  <li id="note11">11. <a href="http://www.ncbi.nlm.nih.gov/pubmed/9497019" target="_blank">Cotinine: effects with and without nicotine.</a> Psychopharmacology (Berl). 1998 Jan ;135(2):141-50.</li>
-  <li id="note12">12. <a href="http://www.ersj.org.uk/content/9/4/643.full.pdf" target="_blank">Importance of baseline cotinine plasma values in smoking cessation: results from a double-blind study with nicotine patch.</a> Eur Respir J. 1996 Apr ;9(4):643-51</li>
-  <li id="note13">13. <a href="http://www.gwern.net/Nicotine" target="_blank">Gwern's Nicotine Page</a></li>
-</ul>
+<ol id="references">
+  <li id="note2"><a href="http://www.neurobrainstorm.com/2012/10/why-tobacco-is-still-legal-side-effect.html" target="_blank">Why Tobacco is Still Legal.</a> Neurobrainstorm. 2012.</li>
+  <li id="note3"><a href="http://www.medicalnewstoday.com/releases/85508.php" target="_blank">Nicotine Patch Decreases Post Surgical Pain.</a> American Society of Anesthesiologists. October 152007.</li>
+  <li id="note4"><a href="http://www.ftc.gov/os/1997/07/cigarett.htm" target="_blank">Tar, Nicotine, and Carbon Monoxide of the Smoke of 1206 Varieties of Domestic Cigarettes For the Year 1994.</a> Federal Trade Commission. July 15 1997</li>
+  <li id="note5"><a href="http://www.ncbi.nlm.nih.gov/pubmed/15131760" target="_blank">Acute effects of nicotine on serum glucose insulin growth hormone and cortisol in healthy smokers.</a> Metabolism. 2004 May; 53(5):578-82.</li>
+  <li id="note6"><a href="http://circ.ahajournals.org/content/94/5/878.full" target="_blank">Long-term Use of Nicotine Gum Is Associated With Hyperinsulinemia and Insulin Resistance.</a> Circulation. 1996; 94: 878-881</li>
+  <li id="note7"><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2446482/" target="_blank">Transdermal Nicotine in Adult ADHD With Depression and Anxiety.</a> Prim Care Companion J Clin Psychiatry. 2008; 10(3): 253–254.</li>
+  <li id="note8"><a href="http://www.ncbi.nlm.nih.gov/pubmed/16177026" target="_blank">Monoamine Oxidase Inhibition Dramatically Increases the Motivation to Self-Administer Nicotine in Rats.</a> The Journal of Neuroscience, 21 September 2005, 25(38): 8593-8600</li>
+  <li id="note9"><a href="http://onlinelibrary.wiley.com/doi/10.1111/j.1360-0443.2008.02279.x/full" target="_blank">Association of a single nucleotide polymorphism in neuronal acetylcholine receptor subunit alpha 5 (CHRNA5) with smoking status and with ‘pleasurable buzz’ during early experimentation with smoking.</a> Addiction. 2008; 103 (9): 1544</li>
+  <li id="note10"><a href="http://howshealth.com/how-long-does-nicotine-stay-in-your-system/" target="_blank">How long does Nicotine stay in your System?</a></li>
+  <li id="note11"><a href="http://www.ncbi.nlm.nih.gov/pubmed/9497019" target="_blank">Cotinine: effects with and without nicotine.</a> Psychopharmacology (Berl). 1998 Jan; 135(2):141-50.</li>
+  <li id="note12"><a href="http://www.ersj.org.uk/content/9/4/643.full.pdf" target="_blank">Importance of baseline cotinine plasma values in smoking cessation: results from a double-blind study with nicotine patch.</a> European Respiratory Journal. 1996 Apr; 9(4):643-51</li>
+  <li id="note13"><a href="http://www.gwern.net/Nicotine" target="_blank">Gwern's Nicotine Page</a></li>
+</ol>
