fixed occupy spacing, added new divs and anchors plus all the complementary css

--- a/_posts/2012-12-26-nicotine.md
+++ b/_posts/2012-12-26-nicotine.md
@@ -20,12 +20,12 @@ On rare occasions over the past few years I have smoked cigarettes.  Usually at 
 
 Unfortunately, cigarettes are messy and quite problematic.  I was curious about what exactly nicotine can do and the easiest way to control for the bevy of factors tied to cigarettes (social conditions, weather, countless side-effects, inconsistency of dosage by brand or individual cigarette) I decided to try out some nicotine patches.
 
-<ul type="none">
-<li> - <a href="#background">Background</a></li>
-<li> - <a href="#setup">Setup</a></li>
-<li> - <a href="#log">Log</a></li>
-<li> - <a href="#summary">Summary</a></li>
-<li> - <a href="#references">References</a></li>
+<ul class="ul-toc">
+<li><a href="#background">Background</a></li>
+<li><a href="#setup">Setup</a></li>
+<li><a href="#log">Log</a></li>
+<li><a href="#summary">Summary</a></li>
+<li><a href="#references">References</a></li>
 </ul>
 
 ##Background##
